--- a/packages/components/s-specs-editor-component/src/css/components/prop.css
+++ b/packages/components/s-specs-editor-component/src/css/components/prop.css
@@ -1,6 +1,10 @@
 .s-specs-editor_prop {
     padding-inline: var(--s-specs-editor-padding-inline);
 
+    .s-specs-editor_prop {
+        padding-inline: 0;
+    }
+
     &:has(> .s-specs-editor_repeatable) {
         padding: 0;
     }
