--- a/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -38,6 +38,47 @@
     z-index: 10;
     padding-block: 0;
 
+    ._bkg {
+        position: absolute;
+        top: 0;
+        left: -400px;
+        width: calc(100% + 400px);
+        height: 100%;
+        background: conic-gradient(
+            sugar.color(main, surface),
+            sugar.color(main, --alpha 0.3)
+        );
+        transform: translate(0, 0);
+
+        &:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                sugar.color(main, background),
+                sugar.color(main, background, --alpha 0),
+                sugar.color(main, background)
+            );
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                90deg,
+                sugar.color(main, background),
+                sugar.color(main, background, --alpha 0),
+                sugar.color(main, background)
+            );
+        }
+    }
+
     .s-logo--coffeekraken-picto {
         width: 100px;
     }
@@ -52,6 +93,7 @@
     }
 
     ._content {
+        position: relative;
         display: flex;
         align-items: center;
         gap: sugar.margin(100);
@@ -81,108 +123,39 @@
         width: 50vw;
         height: 100%;
         user-select: none;
-        pointer-events: none;
 
         filter: drop-shadow(
             150px 100px 15px sugar.color(main, background, --darken 10)
         );
         * {
-            font-family: 'Baloo Da 2', cursive;
+            /* font-family: 'Baloo Da 2', cursive; */
+            @sugar.font.family (code);
             white-space: nowrap;
         }
 
         ._line {
             white-space: nowrap;
             line-height: 1.3;
-
-            .s-tc--error {
-                /* text-decoration: underline; */
-            }
         }
 
         .s-split-letter {
             opacity: 0;
         }
 
+        .s-tc--white {
+            color: white;
+        }
+
         ._text {
             color: sugar.color(main, text);
         }
         ._comment {
-            opacity: 0.5;
+            color: sugar.color(main, text, --alpha 0.5);
         }
 
-        ._01-1,
-        ._01-2,
-        ._01-3 {
-            display: none;
+        ._code {
             position: absolute;
-            font-size: 250px;
-            top: 50%;
-            transform: translateY(-50%);
-            animation: welcome-blur 2s ease-in-out 0s infinite;
-            /* filter: blur(20px); */
-            opacity: 0.2;
-        }
-        ._01-2 {
-            opacity: 0.03 !important;
-            font-size: 350px;
-            top: 60%;
-            left: -40%;
-            * {
-                opacity: 1 !important;
-                color: black !important;
-            }
-        }
-
-        ._01-3 {
-            opacity: 0.5 !important;
-            z-index: 10;
-            font-size: 350px;
-            top: 40%;
-            left: 40%;
-            filter: blur(70px) !important;
-            * {
-                opacity: 1 !important;
-            }
-        }
-
-        ._02 {
-            position: absolute;
-            font-size: 40px;
-            top: 20%;
-            left: 0;
-            display: none;
-            transform: translateY(-10%);
-        }
-        ._03 {
-            position: absolute;
-            display: none;
-            font-size: 80px;
-            top: 70%;
-            left: 0;
-            opacity: 0.4;
-            transform: translateY(-10%);
-            filter: blur(10px)
-                drop-shadow(0 0 20px sugar.color(main, background));
-        }
-        ._04 {
-            position: absolute;
-            font-size: 40px;
-            top: 50%;
-            left: 20%;
-            transform: translateY(-50%);
-        }
-        ._05 {
-            color: sugar.color(error, text);
-            position: absolute;
-            font-size: 40px;
-            top: 50%;
-            left: 20%;
-            transform: translateY(-50%);
-        }
-        ._06 {
-            position: absolute;
-            font-size: 40px;
+            font-size: 30px;
             top: 50%;
             left: 20%;
             transform: translateY(-50%);
