--- a/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -118,11 +118,39 @@
 
     ._illustration {
         position: absolute;
-        top: 0;
-        left: 40%;
-        width: 50vw;
-        height: 100%;
-        user-select: none;
+        top: 50%;
+        left: 50%;
+        width: calc(900px);
+        aspect-ratio: 4/3;
+        transform: translateY(-50%) scale(1);
+        @sugar.transition;
+
+        &:hover {
+            transform: translateY(-50%) scale(1.02);
+        }
+
+        /* &:after,
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            border: 1px solid sugar.color(accent);
+            @sugar.border.radius;
+        }
+        &:before {
+            top: 20%;
+            right: 20%;
+            border-left: none;
+            border-bottom: none;
+        }
+        &:after {
+            bottom: 20%;
+            left: 0;
+            border-top: none;
+            border-right: none;
+        } */
 
         filter: drop-shadow(
             150px 100px 15px sugar.color(main, background, --darken 10)
@@ -157,7 +185,7 @@
             position: absolute;
             font-size: 30px;
             top: 50%;
-            left: 20%;
+            left: 0;
             transform: translateY(-50%);
         }
     }
