--- a/packages/app/s-dashboard/src/js/partials/s-dashboard-browserstack-component/s-dashboard-browserstack-component.css
+++ b/packages/app/s-dashboard/src/js/partials/s-dashboard-browserstack-component/s-dashboard-browserstack-component.css
@@ -14,4 +14,8 @@
         text-align: center;
         padding: sugar.padding(30);
     }
+
+    .s-tooltip {
+        white-space: nowrap;
+    }
 }
