--- a/packages/@websites/css-coffeekraken-io/src/css/index.css
+++ b/packages/@websites/css-coffeekraken-io/src/css/index.css
@@ -11,11 +11,11 @@ body {
     width: 100vw;
 }
 
-input:focus,
-button:focus,
-a:focus {
-    background: red !important;
-}
+/* input:focus,
+    button:focus,
+    a:focus {
+        background: red !important;
+    } */
 
 .s-container:not(#header .s-container, .s-panel .s-container) {
     margin: 0 0 0 50%;
