--- a/packages/app/s-dashboard/src/css/s-dashboard.css
+++ b/packages/app/s-dashboard/src/css/s-dashboard.css
@@ -10,6 +10,8 @@
 @import './generic/stat.css';
 @import './generic/tabs.css';
 
+@import './generic/s-tooltip.css';
+
 @import './partials/header.css';
 
 body {
