--- a/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -124,6 +124,7 @@
         aspect-ratio: 4/3;
         transform: translateY(-50%) scale(1);
         user-select: none;
+        /* pointer-events: none; */
         @sugar.transition;
 
         /* &:hover {
