--- a/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -41,23 +41,24 @@
     ._bkg {
         position: absolute;
         top: 0;
-        left: -400px;
         width: calc(100% + 400px);
         height: 100%;
-        background: conic-gradient(
+        background-color: sugar.color(main, surface, --lighten 3);
+        background: radial-gradient(#000000, #000000);
+        /* background-image: conic-gradient(
             sugar.color(main, surface),
             sugar.color(main, --alpha 0.3)
-        );
-        transform: translate(0, 0);
+        ); */
+        /* transform: translate(0, 0); */
 
-        &:after {
+        /* &:after {
             content: '';
             position: absolute;
             bottom: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(
+            background-image: linear-gradient(
                 sugar.color(main, background),
                 sugar.color(main, background, --alpha 0),
                 sugar.color(main, background)
@@ -76,7 +77,7 @@
                 sugar.color(main, background, --alpha 0),
                 sugar.color(main, background)
             );
-        }
+        } */
     }
 
     .s-logo--coffeekraken-picto {
@@ -126,6 +127,10 @@
         user-select: none;
         /* pointer-events: none; */
         @sugar.transition;
+
+        * {
+            color: white !important;
+        }
 
         /* &:hover {
             transform: translateY(-50%) scale(1.02);
